--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,14 +18,11 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -t community-app .
+        run: docker build -t working-stats-dashboard .
 
-      - name: Run container and test
+      - name: Run container from image
         run: |
-          docker run -d -p 5000:5000 --name test-app community-app
+          docker run -d -p 5000:5000 --name test-app working-stats-dashboard
           sleep 5
           curl --fail http://localhost:5000 || (docker logs test-app && exit 1)
-
-      - name: Cleanup
-        run: docker rm -f test-app
 
